RESOLVED FIXED160395
AX: Simulated touch events are not working on iOS
https://bugs.webkit.org/show_bug.cgi?id=160395
Summary AX: Simulated touch events are not working on iOS
Nan Wang
Reported 2016-07-31 22:17:13 PDT
The dispatchTouchEvent() in AccessibilityObject::press() is not working.
Attachments
Initial patch (5.00 KB, patch)
2016-08-02 12:14 PDT, Nan Wang
buildbot: commit-queue-
Archive of layout-test-results from ews122 for ios-simulator-wk2 (648.88 KB, application/zip)
2016-08-02 13:26 PDT, Build Bot
no flags
Patch (7.30 KB, patch)
2016-08-02 15:12 PDT, Nan Wang
no flags
Patch (7.07 KB, patch)
2016-08-02 15:52 PDT, Nan Wang
buildbot: commit-queue-
Archive of layout-test-results from ews121 for ios-simulator-wk2 (776.73 KB, application/zip)
2016-08-02 16:44 PDT, Build Bot
no flags
Patch (11.03 KB, patch)
2016-08-02 17:12 PDT, Nan Wang
no flags
Radar WebKit Bug Importer
Comment 1 2016-07-31 22:17:51 PDT
Simon Fraser (smfr)
Comment 2 2016-08-01 11:12:42 PDT
Nan Wang
Comment 3 2016-08-02 12:14:33 PDT
Created attachment 285125 [details] Initial patch
chris fleizach
Comment 4 2016-08-02 12:17:52 PDT
Comment on attachment 285125 [details] Initial patch View in context: https://bugs.webkit.org/attachment.cgi?id=285125&action=review > Source/WebCore/accessibility/AccessibilityObject.cpp:926 > +#if PLATFORM(IOS) Should this be guarded instead by ENABLE_TOUCH_EVENTS
Nan Wang
Comment 5 2016-08-02 12:32:05 PDT
Comment on attachment 285125 [details] Initial patch View in context: https://bugs.webkit.org/attachment.cgi?id=285125&action=review >> Source/WebCore/accessibility/AccessibilityObject.cpp:926 >> +#if PLATFORM(IOS) > > Should this be guarded instead by ENABLE_TOUCH_EVENTS Because hasTouchEventListener() is only in iOS. And the function body of dispatchedTouchEvent() is guarded by IOS_TOUCH_EVENTS. Do you think I should change it to IOS_TOUCH_EVENTS?
Simon Fraser (smfr)
Comment 6 2016-08-02 13:02:42 PDT
Comment on attachment 285125 [details] Initial patch View in context: https://bugs.webkit.org/attachment.cgi?id=285125&action=review > Source/WebCore/platform/ios/PlatformEventFactoryIOS.mm:275 > + m_isPotentialTap = true; Is this changing the behavior of both createPlatformTouchEvent and createPlatformSimulatedTouchEvent? Is that desired?
Nan Wang
Comment 7 2016-08-02 13:25:59 PDT
Comment on attachment 285125 [details] Initial patch View in context: https://bugs.webkit.org/attachment.cgi?id=285125&action=review >> Source/WebCore/platform/ios/PlatformEventFactoryIOS.mm:275 >> + m_isPotentialTap = true; > > Is this changing the behavior of both createPlatformTouchEvent and createPlatformSimulatedTouchEvent? Is that desired? This only affects createPlatformSimulatedTouchEvent.
Build Bot
Comment 8 2016-08-02 13:26:48 PDT
Comment on attachment 285125 [details] Initial patch Attachment 285125 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/1800128 New failing tests: platform/ios-simulator/ios/accessibility/press-fires-touch-events.html
Build Bot
Comment 9 2016-08-02 13:26:51 PDT
Created attachment 285131 [details] Archive of layout-test-results from ews122 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews122 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.5
Nan Wang
Comment 10 2016-08-02 13:29:18 PDT
Working on the test failure now.
Nan Wang
Comment 11 2016-08-02 15:12:04 PDT
Created attachment 285145 [details] Patch Fixed test.
Nan Wang
Comment 12 2016-08-02 15:52:11 PDT
Created attachment 285153 [details] Patch Test seemed to be timing out. I think we don't need to do the async test.
Build Bot
Comment 13 2016-08-02 16:44:22 PDT
Comment on attachment 285153 [details] Patch Attachment 285153 [details] did not pass ios-sim-ews (ios-simulator-wk2): Output: http://webkit-queues.webkit.org/results/1800937 New failing tests: platform/ios-simulator/ios/accessibility/press-fires-touch-events.html
Build Bot
Comment 14 2016-08-02 16:44:26 PDT
Created attachment 285160 [details] Archive of layout-test-results from ews121 for ios-simulator-wk2 The attached test failures were seen while running run-webkit-tests on the ios-sim-ews. Bot: ews121 Port: ios-simulator-wk2 Platform: Mac OS X 10.11.5
Simon Fraser (smfr)
Comment 15 2016-08-02 16:46:29 PDT
Don't forget that touch event code in OpenSource is different (and mostly disabled).
chris fleizach
Comment 16 2016-08-02 16:54:41 PDT
(In reply to comment #15) > Don't forget that touch event code in OpenSource is different (and mostly > disabled). Is there a way to test code that's guarded by IOS_TOUCH_EVENTS with a layout test?
Nan Wang
Comment 17 2016-08-02 17:12:31 PDT
Created attachment 285166 [details] Patch Skipping the touch event test on wk2
WebKit Commit Bot
Comment 18 2016-08-02 19:39:56 PDT
Comment on attachment 285166 [details] Patch Clearing flags on attachment: 285166 Committed r204062: <http://trac.webkit.org/changeset/204062>
WebKit Commit Bot
Comment 19 2016-08-02 19:40:04 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.