AX: Simulated touch events are not working on iOS https://bugs.webkit.org/show_bug.cgi?id=160395 <rdar://problem/27633597>

Reviewed by Chris Fleizach.

Source/WebCore:

We should mark the simulated touch as a potential tap otherwise it won't
be handled on iOS. Also, we need to dispatch both touch start and touch end
to mimic the real touch events. Last, added a has event listeners check,
because iOS is dispatching mouse click events for elements without touch event
listeners.

Test: accessibility/ios-simulator/press-fires-touch-events.html

* accessibility/AccessibilityObject.cpp:
(WebCore::AccessibilityObject::press):
(WebCore::AccessibilityObject::dispatchTouchEvent):
* page/ios/EventHandlerIOS.mm:
(WebCore::EventHandler::dispatchSimulatedTouchEvent):
* platform/ios/PlatformEventFactoryIOS.mm:
(WebCore::PlatformTouchEventBuilder::PlatformTouchEventBuilder):

Tools:

* WebKitTestRunner/InjectedBundle/ios/AccessibilityUIElementIOS.mm:
(WTR::AccessibilityUIElement::press):
(WTR::AccessibilityUIElement::setSelectedChild):

LayoutTests:

* accessibility/ios-simulator/press-fires-touch-events-expected.txt: Added.
* accessibility/ios-simulator/press-fires-touch-events.html: Added.
* platform/ios-simulator-wk2/TestExpectations:
* platform/ios-simulator/ios/accessibility/press-fires-touch-events-expected.txt: Removed.
* platform/ios-simulator/ios/accessibility/press-fires-touch-events.html: Removed.


Canonical link: https://commits.webkit.org/178623@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@204062 268f45cc-cd09-0410-ab3c-d52691b4dbfc